New Plane & Journal

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 .project
 .classpath
 MyKey
+
+Development Journal/Development Journal/Journal.synctex.gz
+
+Development Journal/Development Journal/Journal.aux
+
+Development Journal/Development Journal/Journal.log
