Added some extra custom plane support. Can't work on update position right now. I'll do something else and come back to it later

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Development Journal/Development Journal/Journal.synctex.gz
 Development Journal/Development Journal/Journal.aux
 
 Development Journal/Development Journal/Journal.log
+
+.settings/org.eclipse.core.resources.prefs
