Adding Multiple Planes support for DataFile

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .classpath
 MyKey
 
+downloads/
+
 Development Journal/Development Journal/Journal.synctex.gz
 
 Development Journal/Development Journal/Journal.aux
