--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Development Journal/Development Journal/Journal.synctex.gz
 Development Journal/Development Journal/Journal.aux
 Development Journal/Development Journal/Journal.log
 .settings/org.eclipse.core.resources.prefs
+Planes_v3.jar
+planes.bat
