Updating positions with DB

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Development Journal/Development Journal/Journal.log
 .settings/org.eclipse.core.resources.prefs
 Planes_v3.jar
 planes.bat
+.settings/
